[package]
name = "qtrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive", "env"] }
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
serde_toml = "0.0.1"
toml = "0.8.8"
url = "2.5.0"
